2005-04-09  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_parseargs.test: Re-enable test for corrupted literal
	table.

2005-04-09  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/dns.c: Fixed GetAddr() when dealing with gethostbyname_r
	  calls. In some/many cases we ended up in an infinite loop.

	* nsd/tclobjv.c: SetSpecFromAny does not invalidate string rep 
	  of the passed object after converting it to the ns:spec
	  object type. This will definitely corrupt the interp literal
	  table and result in process exitus when the interp is being
	  destroyed.
	* nsd/tclobj.c: fixed broken ptr deref
	* nsd/nsmain.c: adjusted options parsing for Windows / unix

2005-04-08  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nsd.h: Added non-gnu implementation of poll() for
	* nsd/unix.c: platforms not implementing it (Darwin)

2005-04-03  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd.nsmain.c: fixed make test, argumens nowe processed
	  until first non dash parameter.

2005-04-03  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsmain.c: changed command line parsing from getopt to
	  simple manual processing thus getopt is not needed anymore.
	* nsd/getopt.c: removed because no needed anymore

2005-04-02  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/driver.c:
	* nsd/tclinit.c:
	* nsd/nsmain.c: Add -c command line option which causes the server
	to start in command mode, reading commands from stdin and
	executing them like a tclsh.

	* Makefile:
	* tests/test.nscfg:
	* tests/all.tcl: Add new Makefile targets test, runtest and gdb
	which start the server in command mode.  Modify the test runner
	and add a test server config file.

	* tests/http.test:
	* tests/ns_addrbyhost.test:
	* tests/ns_adp_compress.test:
	* tests/ns_hostbyaddr.test:
	* tests/ns_hrefs.test:
	* tests/ns_parseargs.test: Update tests to use tlctest syntax and
	features.

2005-04-02  Vlad Seryakov  <seryakov@users.sf.net>
