@@ -1,3 +1,7 @@
+2005-04-11  Stephen Deasey  <sdeasey@users.sf.net>
+
+	* tests/ns_urlencode.test: Add missing tests for urlencode fix.
+
 2005-04-09  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* tests/ns_parseargs.test: Re-enable test for corrupted literal
